[gd_scene load_steps=6 format=3 uid="uid://dj1137ma426k8"]

[ext_resource type="Script" path="res://logic/ui/game_input.gd" id="1_a6i7y"]
[ext_resource type="Script" path="res://logic/game/cursor.gd" id="2_eu2tc"]
[ext_resource type="Texture2D" uid="uid://b4pxuxb2m8ko8" path="res://assets/images/game/tilemap_packed.png" id="3_p4nu0"]
[ext_resource type="Script" path="res://logic/ui/selection.gd" id="4_g5hwt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t4mh3"]
atlas = ExtResource("3_p4nu0")
region = Rect2(224, 96, 32, 32)

[node name="GameInput" type="Camera2D"]
zoom = Vector2(3, 3)
script = ExtResource("1_a6i7y")

[node name="Decouple" type="Node" parent="."]

[node name="Cursor" type="Marker2D" parent="Decouple"]
script = ExtResource("2_eu2tc")

[node name="Selection" type="Sprite2D" parent="Decouple"]
modulate = Color(1, 1, 1, 0.690196)
z_index = 1
position = Vector2(0, 2)
rotation = 1.5708
scale = Vector2(1, 1.02)
texture = SubResource("AtlasTexture_t4mh3")
script = ExtResource("4_g5hwt")

[connection signal="selection_changed" from="Decouple/Selection" to="." method="_on_selection_changed"]
